# Weather-Forecast

./: CMakeLists.txt  README.md  config.json
include/: Config_parser.h  Interface.h  Meteo_requests.h  Ninja_requests.h  Weather_forecast.h
src/: CMakeLists.txt  Config_parser.cpp  Interface.cpp  Meteo_requests.cpp  Ninja_requests.cpp  Weather_forecast.cpp
